Fix images not showing bug.

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,7 +1,7 @@
 page-login {
     div.scroll-content {
-        background-image: url(../../assets/img/ITW-A1-Letters.png);
-        background-size: cover;
+      background-image: url('../assets/img/ITW-A1-Letters.png');
+      background-size: cover;
     }
     ion-item.item-block {
         background-color: transparent;
